adds partial qoutes, font style souces and html divs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <div id="quotebox"></div>
+    <div id="sourcebox"></div>
+    <div id="citation-year-box"></div>
+    <button></<button>
     <script src="js/quotes.js" async defer></script>
     <script src="js/scripts.js" async defer></script>
   </body>
