--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Random Quote Generator</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Random Quotes</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
+
   <body>
-    <div id="quotebox"></div>
-    <div id="sourcebox"></div>
-    <div id="citation-year-box"></div>
-    <button></<button>
-    <script src="js/quotes.js" async defer></script>
-    <script src="js/scripts.js" async defer></script>
+    <header>
+      <h1>Random Quotes</h1>
+      <button id="load-quote" class="load-quote">Show another quote</button>
+    </header>
+
+    <div class="container">
+      <div id="quote-box" class="quote-box">
+        <p class="quote">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.</p>
+        <p class="source">Patrick McKenzie<span class="citation">Twitter</span><span class="year">2016</span></p>
+      </div>
+    </div>
+    
+    <script src="js/script.js"></script>
   </body>
 </html>
